# ves-system

./: .gitignore  CLI-README.md  LICENSE  Makefile  README.md  create_structure.py  pyproject.toml  setup.py
examples/: bulk_cve.txt  bulk_output.md
requirements/: base.txt  cli.txt
scripts/setup/: install.sh
src/ves/: __init__.py
src/ves/cli/: __init__.py  main.py
src/ves/cli/commands/: __init__.py  bulk.py  config.py  info.py  scan.py  version.py
src/ves/cli/formatters/: __init__.py  csv.py  json.py  table.py
src/ves/clients/: epss_client.py  kev_client.py  nvd_client.py
src/ves/config/: settings.py
src/ves/core/: __init__.py  models.py
src/ves/processing/: processor.py
src/ves/scoring/: lev_calculator.py  ves_scorer.py
tests/: epss_api.py  lev_alt.py  lev_calculation.py
