[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ves-system"
version = "1.0.0"
description = "Vulnerability Evaluation System - Comprehensive vulnerability assessment"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "VES Development Team", email = "dev@ves-security.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "asyncpg>=0.28.0",
    "tenacity>=8.0.0",
    "python-dateutil>=2.8.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
cli = ["rich>=13.0.0", "typer>=0.7.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "redis>=4.5.0"]
web = ["dash>=2.10.0", "plotly>=5.0.0", "pandas>=1.5.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.0.280"]
test = ["pytest-cov>=4.0.0", "httpx>=0.24.0", "pytest-mock>=3.10.0"]

[project.scripts]
ves = "ves.cli.main:cli"
ves-api = "ves.api.app:main"
ves-worker = "ves.processing.workers:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"